--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
-    "@ngrx/effects": "^5.2.0",
-    "@ngrx/entity": "^5.2.0",
-    "@ngrx/router-store": "^5.2.0",
-    "@ngrx/store": "^5.2.0",
-    "@ngrx/store-devtools": "^5.2.0",
+    "@ngrx/effects": "^6.0.0-beta.3",
+    "@ngrx/entity": "^6.0.0-beta.3",
+    "@ngrx/router-store": "^6.0.0-beta.3",
+    "@ngrx/store": "^6.0.0-beta.3",
+    "@ngrx/store-devtools": "^6.0.0-beta.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "ngrx-store-freeze": "^0.2.2",
